[package]
name = "hyper_echo"
version = "0.1.0"
edition = "2024"

[lib]
name = "hyper_echo"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
tokio = {version = "1", features = ["full"]}
tokio-util = "0.7"
tower-http = {version = "0.6", features = ["trace"], optional = true}
hyper = {version = "1.5", features = ["server", "http1"]}
hyper-util = {version = "0.1", features = ["tokio", "service", "server", "http1", "http2"]}
http-body-util = "0.1"
tower = {version = "0.5", features = ["util", "limit", "timeout"]}
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
pin-project = "1.1.8"
fastwebsockets = {version = "0.10.0", features = ["upgrade"]}

[features]
default = ["tower_trace"]
tower_trace = ["dep:tower-http"]
custom_trace = []

[dev-dependencies]
reqwest = "0.12"
