[package]
name = "hyper_echo"
version = "0.1.1"
edition = "2024"
authors = ["Sergey Kuznetsov"]
description = "Echo server supporting http and websocket"
documentation = "https://docs.rs/hyper_echo"
repository = "https://github.com/kuznetsss/hyper_echo"
license = "MIT"
keywords = ["echo", "server", "http", "ws", "websocket"]
categories = ["command-line-utilities", "web-programming::http-server", "web-programming::websocket"]

[lib]
name = "hyper_echo"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5.44", features = ["derive"] }
tokio = {version = "1", features = ["full"]}
tokio-util = "0.7"
tower-http = {version = "0.6", features = ["trace"], optional = true}
hyper = {version = "1.6", features = ["server", "http1"]}
hyper-util = {version = "0.1", features = ["tokio", "service", "server", "http1", "http2"]}
http-body-util = "0.1"
tower = {version = "0.5", features = ["util", "limit", "timeout"]}
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
pin-project = "1.1.10"
fastwebsockets = {version = "0.10.0", features = ["upgrade"]}

[features]
default = ["tower_trace"]
tower_trace = ["dep:tower-http"]
custom_trace = []

[dev-dependencies]
reqwest = "0.12"
tracing-test = {version = "0.2", features = ["no-env-filter"]}
